--- a/FE/Views/Home/Friend/PopupAddFriend.cshtml
+++ b/FE/Views/Home/Friend/PopupAddFriend.cshtml
@@ -8,7 +8,7 @@
     {
         {1, "AddFriend()" },
         {2, $"updateFriendRequest('{Model.Id}', 1)"},
-        {3, "RecallFriendRequest()" }
+        {3, $"deleteFriendRequest('{Model.Id}')" }
     };
 
     // Content of button: nội dung của button theo các case
@@ -153,12 +153,12 @@
                 @* Button change to Info screen *@
                 <button type="button" 
                         onclick="$('.btn-back').removeClass('d-none')"
-                        class="btn btn-secondary" 
+                        class="btn btn-secondary fs-6" 
                         id="btnInfo">Thông tin</button>
                 @* Kết bạn button *@
                 <button type="button"
                         onclick="@NOF[ViewBag.Case]"
-                        class="btn btn-primary">@COB[ViewBag.Case]</button>
+                        class="btn btn-primary fs-6">@COB[ViewBag.Case]</button>
             </div>
         </div>
 
@@ -221,16 +221,16 @@
                     <div class="d-flex justify-content-between bg-white">
                         <button type="button"
                                 onclick="@NOF[ViewBag.Case]"
-                                class="btn btn-light fw-bold lh-1"
-                                style="width: 49%; text-transform: none; font-size: 16px; padding: 10px 12px"
+                                class="btn btn-light fs-6"
+                                style="width: 49%; padding: 10px 12px"
                                 data-mdb-ripple-init
                                 data-mdb-ripple-color="dark">
                             @COB[ViewBag.Case]
                         </button>
                         <button type="button" 
                                 onclick="transToChatScreen('@Model.User.Id')"
-                                class="btn btn-secondary fw-bold lh-1"
-                                style="width: 49%; text-transform: none; font-size: 16px; padding: 10px 12px"
+                                class="btn btn-secondary fs-6"
+                                style="width: 49%; padding: 10px 12px"
                                 data-mdb-ripple-init>Nhắn tin</button>
                     </div>
                 </div>
