--- a/FE/Views/Home/Message/_MessagePartial.cshtml
+++ b/FE/Views/Home/Message/_MessagePartial.cshtml
@@ -6,6 +6,11 @@
         color: gray;
         pointer-events: none;
     }
+
+    #MessageContainer{
+        display: flex;
+        margin-top: 22px
+    }
 </style>
 
 <div class="card text-center flex-grow-1"
@@ -62,13 +67,13 @@
         </div>
     </div>
 
-    <div class="card-body p-0">
-        <div id="FriendStatus"></div>
+    <div id="MessageWrapper" class="card-body p-0 position-relative" style="height: calc(100% - 136px); overflow: auto">
+        <div id="FriendStatus" class="position-absolute position-absolute w-100"></div>
         <div id="MessageContainer"></div>
     </div>
 
     <div class="card-footer d-flex border-0"
-         style="padding: 12px 8px">
+         style="padding: 10px 8px">
         <button type="button"
                 class="btn btn-link rounded-circle position-relative align-self-end"
                 style="margin: 6px; height: 36px; width: 36px; padding: 0"
@@ -104,6 +109,7 @@
                         overflow-x: hidden"></div>
         </div>
         <button type="button"
+                onclick="sendMessage('@Model.Id')"
                 class="btn btn-link rounded-circle position-relative align-self-end"
                 style="margin: 6px; height: 36px; width: 36px; padding: 0;"
                 data-mdb-ripple-init
@@ -121,6 +127,7 @@
 <script>
     $(document).ready(function () {
         GetFriendRequestStatus();
+        GetMessage()
 
         var MessageContent = document.getElementById("Message_Content");
 
@@ -138,6 +145,24 @@
         MessageContent.addEventListener("blur", function () {
             document.getElementById("Message_Container").style.boxShadow = "none";
         });
+
+        MessageContent.addEventListener("paste", function (e) {
+            e.preventDefault(); // Chặn paste mặc định (dán cả định dạng)
+
+            // Lấy dữ liệu plain text từ clipboard
+            const text = (e.clipboardData || window.clipboardData).getData("text");
+
+            // Dán text vào vị trí con trỏ
+            const selection = window.getSelection();
+            if (!selection.rangeCount) return;
+
+            selection.deleteFromDocument(); // Xoá nội dung được chọn hiện tại (nếu có)
+            selection.getRangeAt(0).insertNode(document.createTextNode(text));
+
+            // Di chuyển con trỏ sau đoạn văn bản vừa dán
+            selection.collapseToEnd();
+        });
+
     });
 
     function ShowPopupAddFriend() {
@@ -158,6 +183,23 @@
             data: { Id: '@Model.Id' },
             success: function (data) {
                 $("#FriendStatus").html(data)
+            }
+        });
+    }
+
+    function GetMessage() {
+        $.ajax({
+            url: '@Url.Action("GetListPaging", "Message")',
+            type: 'POST',
+            data: {
+                CurrentId: '@User.Claims.FirstOrDefault(c => c.Type == "UserId").Value',
+                FriendId: '@Model.Id',
+                PageIndex: 1,
+                RowPerPage: 15
+            },
+            success: function (data) {
+                $("#MessageContainer").html(data)
+                //scrollToBottom()
             }
         });
     }
