Hoàng Nhi - Hoàn thành gửi và xử lý đồng bộ kết bạn bằng SignalR

--- a/FE/Views/Home/Contact/FriendRequest/_ReceiveRequestPartial.cshtml
+++ b/FE/Views/Home/Contact/FriendRequest/_ReceiveRequestPartial.cshtml
@@ -137,7 +137,8 @@ else
                     ShowThongBaoThatBai(data.message)
                 } else {
                     CloseModal()
-                    showFriendRequest()
+                    // Gửi yêu cầu cập nhật FriendRequest
+                    connection.invoke("UpdateFriendRequest", id);
                 }
             },
             error: function (xhr, error) {
